# dntt

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
do_nothing_time_tracker/: __init__.py  app.py  config.py  importer.py  models.py  state.py  storage.py  summaries.py
do_nothing_time_tracker/ui/: __init__.py  components.py  layout.py  page_setup.py  theme.py
do_nothing_time_tracker/ui/views/: __init__.py  absence_helpers.py  absences.py  config.py  day_cards.py  entry_controls.py  month.py  today.py  week.py
tests/: conftest.py  test_summaries.py
